- fetching encrypted logs - added from and to - timeinterval to narrow the amount of logs - added possibility to open logs when it arrives from server - added unsubscribe and some robustness when socket goes down - added file-suffixes on log-files (.utls for ordinary files and .encrypted for encrypted ones). - can read fetched encrypted logs from disk (.encrypted)
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8464 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -84,8 +84,33 @@
 }
 
 .utls-logfilter-column{
-    float: left;
+    /*float: left;*/
     padding-bottom: 10px;
+}
+
+.utls-filter-dropdown{
+    display: inline-block;
+    width: 30%;
+}
+
+.utls-inline-column{
+    display: inline-block;
+}
+
+.utls-row{
+    display: block;
+}
+
+.fetch-btn-inline{
+    padding-left: 15px;
+}
+
+.fetch-log-timezone{
+
+}
+
+.timefilter-row{
+    display: block;
 }
 
 .calendardiv{
@@ -131,6 +156,6 @@
 }
 
 .promptDivWide{
-    width: 50%;
+    width: 100%;
     padding: 10px;
 }
