--- a/UtlsLogTool/app/timefilter.component.html
+++ b/UtlsLogTool/app/timefilter.component.html
@@ -1,4 +1,4 @@
-<div class="utls-logfilter-column">
+<div class="utls-logfilter-column utls-inline-column timefilter-row">
     <div class="utls-selector-text utls-text">From:</div>
     <div class="form-group calendarInput">
         <input type="text" class="form-control" value="{{getFromFilterDateString()}}" readonly>
@@ -28,7 +28,7 @@
 </div>
 
 
-<div class="utls-logfilter-column">
+<div class="utls-logfilter-column utls-inline-column">
     <div class="utls-selector-text utls-text">To:</div>
     <div class="form-group calendarInput">
         <input type="text" class="form-control" value="{{getToFilterDateString()}}" readonly>
