added new name on timestamp-column
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8546 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -132,7 +132,7 @@
             <tbody>
             <tr *ngFor="let log of mf.data">
                 <td>{{log.username}}</td>
-                <td>{{log.timestampAsDate}}</td>
+                <td>{{log.timestampAsDateString}}</td>
                 <td>{{log.tab}}</td>
                 <td>{{log.target}}</td>
                 <td>{{log.category}}</td>
