--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -89,14 +89,14 @@
                     <a style="cursor: pointer" (click)="resetSort('tab')" class="text-nowrap">
                         <span *ngIf="isColumnSortAsc('tab')" class="glyphicon glyphicon-triangle-top"></span>
                         <span *ngIf="isColumnSortDesc('tab')" class="glyphicon glyphicon-triangle-bottom"></span>
-                        Active tab
+                        Tab
                     </a>
                 </th>
                 <th class="utls-column-xsmall">
                     <a style="cursor: pointer" (click)="resetSort('target')" class="text-nowrap">
                         <span *ngIf="isColumnSortAsc('target')" class="glyphicon glyphicon-triangle-top"></span>
                         <span *ngIf="isColumnSortDesc('target')" class="glyphicon glyphicon-triangle-bottom"></span>
-                        Using device
+                        Device
                     </a>
                 </th>
                 <th class="utls-column-small">
