--- a/UtlsLogTool/app/fetchLog.component.html
+++ b/UtlsLogTool/app/fetchLog.component.html
@@ -2,7 +2,7 @@
 
     <timefilter></timefilter>
 
-    <div class="utls-logfilter-column">
+    <div class="utls-logfilter-column utls-inline-column utls-inline-column_paddingLeft">
         <div class="utls-selector-text utls-text">
             Choose timezone:
         </div>
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="utls-row fetch-btn-inline">
+    <div class="utls-row">
         <button class="btn btn-primary btn-sm" (click)="fetchLogs()">Fetch logs</button>
         <button class="btn btn-primary btn-sm" (click)="close()">Close</button>
     </div>
