fixed timezone-handling in client. (AST-9362) Also added new filter-pipe on column-sorting and a close calendar/clock-button
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@9850 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -100,6 +100,11 @@
     padding-left: 50px;
 }
 
+.utls-chosen-timezone {
+    display: inline-block;
+    padding-left: 50px;
+}
+
 .utls-filter-dropdown{
     display: inline-block;
     /*width: 30%;*/
@@ -160,11 +165,24 @@
     padding-left: 3px;
 }
 
+.closeicon{
+    display: inline-flex;
+    padding-left: 3px;
+}
+
+
 .calendarInput{
     width: auto;
     display: inline-flex;
     height: 20px;
 }
+
+.readonlyInput{
+    width: auto;
+    display: inline-flex;
+    height: 20px;
+}
+
 
 .promptDiv{
     width: 10%;
