fixed handling with logfiles without timezone
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@9852 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -60,7 +60,7 @@
 
         <div class="utls-logfilter-column utls-chosen-timezone">
             <div class="utls-selector-onlytext utls-text">
-                Logs timezone: {{logsTimezoneId}}
+                Logs timezone: {{currentTimezoneIdText}}
             </div>
 
             <div class="fetch-log-timezone">
