added deviceIp so that its possible to see from which client an event is triggered (AST-9365)
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@9900 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -108,7 +108,7 @@
                         Tab
                     </a>
                 </th>
-                <th class="utls-column-small">
+                <th class="utls-column-xsmall">
                     <a style="cursor: pointer" (click)="resetSort('category')" class="text-nowrap">
                         <span *ngIf="isColumnSortAsc('category')" class="glyphicon glyphicon-triangle-top"></span>
                         <span *ngIf="isColumnSortDesc('category')" class="glyphicon glyphicon-triangle-bottom"></span>
@@ -126,7 +126,14 @@
                     <a style="cursor: pointer" (click)="resetSort('host')" class="text-nowrap">
                         <span *ngIf="isColumnSortAsc('host')" class="glyphicon glyphicon-triangle-top"></span>
                         <span *ngIf="isColumnSortDesc('host')" class="glyphicon glyphicon-triangle-bottom"></span>
-                        Controlling MS
+                        Host MS
+                    </a>
+                </th>
+                <th class="utls-column-xsmall">
+                    <a style="cursor: pointer" (click)="resetSort('deviceIp')" class="text-nowrap">
+                        <span *ngIf="isColumnSortAsc('deviceIp')" class="glyphicon glyphicon-triangle-top"></span>
+                        <span *ngIf="isColumnSortDesc('deviceIp')" class="glyphicon glyphicon-triangle-bottom"></span>
+                        Controlling device
                     </a>
                 </th>
                 <th class="utls-column-xsmall">
@@ -153,6 +160,7 @@
                 <td>{{log.category}}</td>
                 <td>{{log.name}}</td>
                 <td>{{log.host}}</td>
+                <td>{{log.deviceIp}}</td>
                 <td>{{log.targetMs}}</td>
                 <td>{{log.label}}</td>
             </tr>
